# simqas

./: .gitignore  Dockerfile  README.md  docker-compose.yml  processing.py  pyproject.toml  requirements.txt
modes/: dos.py  malware.py  malware_send.py  normal.py  ransom.py  ransom_code.py
monitoring/: extractor.py  metrics2csv.py
simqas/: generate.py  main.py
tests/: test_simqas.py
