[tool.poetry]
name = "simqas"
version = "0.1.0"
description = ""
authors = ["Daniel Travieso <danielgtravieso@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.12"
loguru = "^0.5.3"
uvicorn = "^0.16.0"
fastapi = "^0.70.1"
requests = "^2.26.0"
httpx = "^0.21.1"
pandas = "^1.3.5"
docker = "^5.0.3"
numpy = "^1.21.5"
tensorflow = "^2.7.0"
scikit-learn = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
